// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TelephoneText /> should render the Telephone Text 1`] = `
<span>
  <Emoji
    emoji="flag-au"
    type="body"
  />
  <Styled(Text)
    color="#667380"
    dataAttributes={
      Object {
        "role": "countryCode",
      }
    }
    isUpper={true}
    showFlag={true}
    type="body"
  >
    au
  </Styled(Text)>
  <Text
    dataAttributes={
      Object {
        "role": "phoneNumber",
      }
    }
    isInline={true}
    tag="span"
    type="body"
  >
    +61 412 341 234
  </Text>
</span>
`;

exports[`<TelephoneText /> should render the Telephone Text no flag 1`] = `
<span>
  <Styled(Text)
    color="#667380"
    dataAttributes={
      Object {
        "role": "countryCode",
      }
    }
    isUpper={true}
    showFlag={false}
    type="body"
  >
    au
  </Styled(Text)>
  <Text
    dataAttributes={
      Object {
        "role": "phoneNumber",
      }
    }
    isInline={true}
    tag="span"
    type="body"
  >
    +61 412 341 234
  </Text>
</span>
`;

exports[`<TelephoneText /> should render the Telephone Text with no country information 1`] = `
<span>
  <Text
    dataAttributes={
      Object {
        "role": "phoneNumber",
      }
    }
    isInline={true}
    tag="span"
    type="body"
  >
    33333333
  </Text>
</span>
`;
